Add `--add-exports=jdk.compiler/com.sun.tools.javac.model`